tests/analyze/nested-patterns/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Parameter count mismatch: expected 1, but found 4.
> 12 | 	if m is some node val _l _r {
                ^^^^^^^^^^^^^^^^^^^

error: Name `val` is not defined.
> 13 | 		val
         ^^^

